fixed: member overflow

--- a/src/apps/release/src/app/views/ViewRelease/components/PlanTable/PlanTable.less
+++ b/src/apps/release/src/app/views/ViewRelease/components/PlanTable/PlanTable.less
@@ -10,6 +10,7 @@
 
     // Structure
     max-height: calc(100vh - 225px);
+    overflow-y: scroll;
 
     display: block;
   }
